--- a/7e9c1570e118dc0c.css
+++ b/7e9c1570e118dc0c.css
@@ -499,6 +499,12 @@
     -webkit-text-fill-color:transparent;
     background-clip:text
 }
+.IndexStats_index-stats__color--red__muO5N{
+    background:linear-gradient(97.65deg,#ee3742 11.36%,#ee8442 54.3%,#eedf42 100.78%);
+    -webkit-background-clip:text;
+    -webkit-text-fill-color:transparent;
+    background-clip:text
+}
 .IndexStats_index-stats__color__F8ess::-moz-selection{
     -webkit-text-fill-color:#111
 }
