--- a/7e9c1570e118dc0c.css
+++ b/7e9c1570e118dc0c.css
@@ -217,7 +217,7 @@
     background:#fff url(/_next/static/media/ajax-loader.0b80f665.gif) 50% no-repeat
 }
 @font-face{
-    font-family:slick;
+    font-family:Verdana;
     font-weight:400;
     font-style:normal;
     src:url(/_next/static/media/slick.25572f22.eot);
